feat(for-CACM-Back-9-k8s-ingress-kafka-avro-CI-CD/): new project of managing customer account and mvts on accounts

--- a/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/k8s-ingress-kafka-avro-cacm-bs-ms-address.yml
+++ b/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/k8s-ingress-kafka-avro-cacm-bs-ms-address.yml
@@ -3,3 +3,5 @@ server:
 spring:
   application:
     name: k8s-ingress-kafka-avro-cacm-bs-ms-address
+  datasource:
+   url: jdbc:mysql://ms-database:3307/addresses-db?createIfNotExists=true
