feat(for-CACM-Back-9-k8s-ingress-kafka-avro-CI-CD/): new project of managing customer account and mvts on accounts

--- a/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/application.properties
+++ b/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=root
 ### hibernate jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 ### kafka producer
 spring.kafka.producer.bootstrap-servers=http://kafka-broker-1:9092,http://kafka-broker-2:9093,http://kafka-broker-3:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
