--- a/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/k8s-ingress-kafka-avro-cacm-bs-ms-address.properties
+++ b/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/k8s-ingress-kafka-avro-cacm-bs-ms-address.properties
@@ -1,3 +1,3 @@
 server.port=8881
 spring.application.name=k8s-ingress-kafka-avro-cacm-bs-ms-address
-spring.datasource.url=jdbc:mysql://bs-ms-database:3307/addresses-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3307/addresses-db?createDatabaseIfNotExist=true
