--- a/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/application.properties
+++ b/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/application.properties
@@ -11,12 +11,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 ### kafka producer
-spring.kafka.producer.bootstrap-servers=http://kafka-broker-1:9092,http://kafka-broker-2:9093,http://kafka-broker:9094
+spring.kafka.producer.bootstrap-servers=http://kafka-broker-1:9092,http://kafka-broker-2:9093,http://kafka-broker-3:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 ## #kafka consumer
-spring.kafka.consumer.bootstrap-servers=http://kafka-broker-1:9092,http://kafka-broker-2:9093,http://kafka-broker:9094
+spring.kafka.consumer.bootstrap-servers=http://kafka-broker-1:9092,http://kafka-broker-2:9093,http://kafka-broker-3:9094
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
