--- a/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/k8s-ingress-kafka-avro-cacm-bs-ms-customer.properties
+++ b/for-cacm-back-9-k8s-ingress-kafka-avro-ci-cd/k8s-ingress-kafka-avro-cacm-bs-ms-customer.properties
@@ -1,3 +1,3 @@
 server.port=8882
 spring.application.name=k8s-ingress-kafka-avro-cacm-bs-ms-customer
-spring.datasource.url=jdbc:mysql://bs-ms-database:3306/customers-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3307/customers-db?createDatabaseIfNotExist=true
