--- a/for-cacmer-back-9-k8s-ingress-kafka-avro-ci-cd/k8s-ingress-kafka-avro-cacmer-bs-ms-account.properties
+++ b/for-cacmer-back-9-k8s-ingress-kafka-avro-ci-cd/k8s-ingress-kafka-avro-cacmer-bs-ms-account.properties
@@ -1,3 +1,3 @@
 server.port=8883
 spring.application.name=k8s-ingress-kafka-avro-cacmer-bs-ms-account
-spring.datasource.url=jdbc:mysql://localhost:3307/accounts-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://bs-ms-database:3306/accounts-db?createDatabaseIfNotExist=true
