--- a/for-AEPC-fullstack-1-Spring-Security-K8s-Ingress-Kafka-Avro-CI-CD/spring-security-service.yml
+++ b/for-AEPC-fullstack-1-Spring-Security-K8s-Ingress-Kafka-Avro-CI-CD/spring-security-service.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: ms-spring-security-service
+    name: spring-security-service
   datasource:
     url: jdbc:mysql://localhost:3306/users-roles-db?createDatabaseIfNotExist=true
 server:
