feat(for-AEPC-fullstack-1-Spring-Security-K8s-Ingress-Kafka-Avro-CI-CD):add a security service

--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/ms-registration-service.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/ms-registration-service.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 spring:
   application:
-    name: ms-registration-service
+    name: aepc-api-ms-registry-service
 eureka:
   client:
     register-with-eureka: true
