--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-security-service.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-security-service.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: spring-security-service
+    name: aepc-api-spring-security-service
   datasource:
     url: jdbc:mysql://localhost:3306/users-roles-db?createDatabaseIfNotExist=true
 server:
