--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-bs-ms-employee.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-bs-ms-employee.yml
@@ -2,6 +2,6 @@ server:
   port: 9014
 spring:
   application:
-    name: clean-archi-bs-ms-employee
+aepc-api-spring-secur-oauth2-kafka-bs-ms-employee
   datasource:
     url: jdbc:mysql://localhost:3306/employees-db?createDatabaseIfNotExist=true
