add eureka server docker container url in each ms

--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-gateway-service.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-gateway-service.yml
@@ -3,4 +3,9 @@ server:
 spring:
   application:
     name: aepc-api-gateway-service
+  # to indicate where services registration is running on
+eureka:
+  client:
+    service-url:
+     defaultZone: http://aepc-api-ms-registry-service:9009/eureka/ # this is docker image of regsitraion service
          
