add eureka server docker container url in each ms

--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-ms-registry-service.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-ms-registry-service.yml
@@ -5,5 +5,5 @@ spring:
     name: aepc-api-ms-registry-service
 eureka:
   client:
-    register-with-eureka: true
+    register-with-eureka: false
     fetch-registry: false
