--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-bs-ms-address.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-bs-ms-address.yml
@@ -5,3 +5,9 @@ spring:
     name: aepc-api-spring-secur-oauth2-kafka-bs-ms-address
   datasource:
     url: jdbc:mysql://localhost:3306/addresses-db?createDatabaseIfNotExist=true
+ # to indicate where services registration is running on
+eureka:
+  client:
+    service-url:
+     defaultZone: http://localhost:9009/eureka/ # this is docker image of regsitraion service
+         
