--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-bs-ms-employee.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-bs-ms-employee.yml
@@ -5,3 +5,8 @@ spring:
 aepc-api-spring-secur-oauth2-kafka-bs-ms-employee
   datasource:
     url: jdbc:mysql://localhost:3306/employees-db?createDatabaseIfNotExist=true
+# to indicate where services registration is running on
+eureka:
+  client:
+    service-url:
+     defaultZone: http://localhost:9009/eureka/ # this is docker image of regsitraion service
