--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-gateway-service.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-gateway-service.yml
@@ -7,5 +7,5 @@ spring:
 eureka:
   client:
     service-url:
-     defaultZone: http://aepc-api-ms-registry-service:8761/eureka/ # this is docker image of regsitraion service
+     defaultZone: http://localhost:8761/eureka/ # this is docker image of regsitraion service
          
