--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-bs-ms-employee.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-bs-ms-employee.yml
@@ -2,7 +2,7 @@ server:
   port: 9014
 spring:
   application:
-aepc-api-spring-secur-oauth2-kafka-bs-ms-employee
+    name: aepc-api-spring-secur-oauth2-kafka-bs-ms-employee
   datasource:
     url: jdbc:mysql://localhost:3306/employees-db?createDatabaseIfNotExist=true
 # to indicate where services registration is running on
