--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-employee.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-employee.yml
@@ -1,10 +1,10 @@
 server:
-  port: 9015
+  port: 9014
 spring:
   application:
-    name: aepc-api-spring-secur-oauth2-kafka-bs-ms-project
+    name: aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-employee
   datasource:
-    url: jdbc:mysql://localhost:3306/projects-db?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/employees-db?createDatabaseIfNotExist=true
 # to indicate where services registration is running on
 eureka:
   client:
