--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-project.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-project.yml
@@ -1,10 +1,10 @@
 server:
-  port: 9013
+  port: 9015
 spring:
   application:
-    name: aepc-api-spring-secur-oauth2-kafka-bs-ms-company
+    name: aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-project
   datasource:
-    url: jdbc:mysql://localhost:3306/companies-db?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/projects-db?createDatabaseIfNotExist=true
 # to indicate where services registration is running on
 eureka:
   client:
