--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/application.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    username: root
-    password: root
+    username: admin
+    password: pwd
   jpa:
     show-sql: true
     hibernate:
