chang user and password of sgbd instance

--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/application.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    username: admin
-    password: pwd
+    username: root
+    password: root
   jpa:
     show-sql: true
     hibernate:
