config files rename

--- a/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/application.yml
+++ b/for-AEPC-fullstack-1-application-microservices-protected-with-spring-security-oauth2/application.yml
@@ -17,3 +17,7 @@ spring:
     openfeign:
       circuitbreaker:
         enabled: true
+eureka:
+  client:
+    service-url: 
+    	defaultZone: http://localhsot:8761/eureka/
