--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 #registry service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
