--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=admin123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.hbm2ddl.create_namespaces=true
 
 #registry service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
