--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+
 spring.jpa.properties.hibernate.hbm2ddl.create_namespaces=true
 
 #registry service
