migrate to postgresql

--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
@@ -6,7 +6,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 
 #registry service
-eureka.client.service-url.defaultZone=//localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #to activate microservices to be discovered
 spring.cloud.discovery.enabled=true
 #for microservices that interact with external microservices, this is to activate spring cloud circuit breaker resilience4j
