--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-address.yml
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-address.yml
@@ -4,4 +4,4 @@ spring:
   application:
     name: aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-address
   datasource:
-    url: jdbc:mysql://localhost:3306/addresses-db?createDatabaseIfNotExist=true        
+    url: jdbc:postgresql://localhost:5432/addresses-db?createDatabaseIfNotExist=true        
