--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-employee.yml
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-employee.yml
@@ -4,4 +4,4 @@ spring:
   application:
     name: aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-employee
   datasource:
-    url: jdbc:mysql://localhost:3306/employees-db?createDatabaseIfNotExist=true
+    url: jdbc:postgresql://localhost:5432/employees-db?createDatabaseIfNotExist=true
