--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/aepc-api-spring-security-oauth2-service.yml
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/aepc-api-spring-security-oauth2-service.yml
@@ -2,6 +2,6 @@ spring:
   application:
     name: aepc-api-spring-security-oauth2-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/users-roles-db?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/users-roles-db
 server:
  port: 9011
