--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-company.yml
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-company.yml
@@ -4,4 +4,10 @@ spring:
   application:
     name: aepc-api-spring-secur-oauth2-kafka-avro-bs-ms-company
   datasource:
-    url: jdbc:postgresql://localhost:5432/companies-db?createDatabaseIfNotExist=true
+    url: jdbc:postgresql://localhost:5432/companies-db
+    username: admin
+    password: admin123 
+  jpa: 
+    properties:
+      hibernate: 
+        dialect: org.hibernate.dialect.PostgreSQLDialect   
