business microservices keep postgresql

--- a/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
+++ b/for-AEPC-fullstack-1-app-microservices-protected-with-spring-security-oauth2-resource-server/application.properties
@@ -1,6 +1,4 @@
-# databse
-spring.datasource.username=admin
-spring.datasource.password=admin123
+# database config
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
